--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Open+Sans');
+@import url('http://fonts.googleapis.com/css?family=News+Cycle');
 
 body {
   background: url(img/scrabble_board.jpg) no-repeat center center fixed;
@@ -6,13 +6,13 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: Open-Sans;
+  font-family: 'News Cycle';
 }
 
-#bottom {
-min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-  min-height: 100vh; /* These two lines are counted as one :-)       */
 
+#bottom {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
   display: flex;
   align-items: center;
 
